--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,102 @@ html {
 .header_button-text {
     margin: 0;
 }
+
+/* ++++++++++++++++++++++++++++++++++
+Контейнер слайдшоу
++++++++++++++++++++++++++++++++++ */
+.slideshow-container {
+ max-width: 1000px;
+ position: relative;
+ margin: auto;
+}
+/* ++++++++++++++++++++++++++++++++++
+Прячем картинки по умолчанию
++++++++++++++++++++++++++++++++++ */
+.mySlides {
+ display: none;
+}
+.my {
+   display:block;
+}
+/* ++++++++++++++++++++++++++++++++++
+вперед/назад кнопки
++++++++++++++++++++++++++++++++++ */
+.prev, .next {
+ cursor: pointer;
+ position: absolute;
+ top: 50%;
+ width: auto;
+ margin-top: -22px;
+ padding: 16px;
+ color: white;
+ font-weight: bold;
+ font-size: 18px;
+ transition: 0.6s ease;
+ border-radius: 0 3px 3px 0;
+}
+/* ++++++++++++++++++++++++++++++++++
+Позиция кнопки "следующая" справа
++++++++++++++++++++++++++++++++++ */
+.next {
+ right: 0;
+ border-radius: 3px 0 0 3px;
+}
+/* ++++++++++++++++++++++++++++++++++
+hover и цвет заднего фона
++++++++++++++++++++++++++++++++++ */
+.prev:hover, .next:hover {
+ background-color: rgba(0,0,0,0.8);
+}
+/* ++++++++++++++++++++++++++++++++++
+текст на картинке
++++++++++++++++++++++++++++++++++ */
+.text {
+ color: #f2f2f2;
+ font-size: 15px;
+ padding: 8px 12px;
+ position: absolute;
+ bottom: 8px;
+ width: 100%;
+ text-align: center;
+}
+/* ++++++++++++++++++++++++++++++++++
+текст по номеру 1/3
++++++++++++++++++++++++++++++++++ */
+.numbertext {
+ color: #f2f2f2;
+ font-size: 12px;
+ padding: 8px 12px;
+ position: absolute;
+ top: 0;
+}
+/* ++++++++++++++++++++++++++++++++++
+индикаторы /точки
++++++++++++++++++++++++++++++++++ */
+.dot {
+ cursor: pointer;
+ height: 15px;
+ width: 15px;
+ margin: 0 2px;
+ background-color: #bbb;
+ border-radius: 50%;
+ display: inline-block;
+ transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+ background-color: #717171;
+}
+/* ++++++++++++++++++++++++++++++++++
+анимация fade
++++++++++++++++++++++++++++++++++ */
+.fade {
+ -webkit-animation-name: fade;
+ -webkit-animation-duration: 1.5s;
+ animation-name: fade;
+ animation-duration: 1.5s;
+}
+
+
 .search {
     height: 125px;
     display: flex;
@@ -135,7 +231,6 @@ html {
 }
 
 .card {
-    display: flex;
     width: 290px;
     height: 290px;
     border-radius: 15px;
@@ -197,21 +292,24 @@ html {
 }
 /*Стили для страницы Добавить ДУ (Index2)*/
 
-.main {
-    color: #1E1F20;
-    font-size: 16px;
-    letter-spacing: 1.6px;
-    width: 878px;
-    margin: 66px auto 0;
+.add {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
-
 .content-add {
     padding: 42px 42px 42px;
     display: flex;
     flex-direction: column;
     border-radius: 15px;
-    background: linear-gradient(180deg, #FCFDFF 0%, rgba(250, 247, 249, 0.46) 100%);
-    box-shadow: 3px 3px 10px 0px #3B5EB9;
+    background: linear-gradient(180deg, #FCFDFF 0%, rgba(250, 247, 249, 1) 100%);
+    box-shadow: 3px 3px 10px 0px #3B5EB9;    
+    color: #1E1F20;
+    font-size: 16px;
+    letter-spacing: 1.6px;
+    width: 878px;
+    margin: auto;
+    position: relative;
 }
 .form {
 }
@@ -243,6 +341,19 @@ html {
 
 .form_immage:hover {
     cursor: pointer;
+}
+
+.add_closeicon {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+}
+
+.add_closeicon:hover {
+    top: 8px;
 }
 
 .form_button {
